5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1674_1107.log
== TEST (2019-04-30 11:19:51) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

x = "Hoje eh "
y = " e o dia futuro eh "

c = (a + b)%7
-- OUTPUT:
Entradas: -11.0 , 22.0 , 33.0
Area: invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:20:08) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

x = "Hoje eh "
y = " e o dia futuro eh "

c = (a + b)%7
print(c)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:20:26) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

x = "Hoje eh "
y = " e o dia futuro eh "

c = (a + b)%7
print(c)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:20:34) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

x = "Hoje eh "
y = " e o dia futuro eh "

c = (a + b)%7
print(c)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:23:44) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

x = "Hoje eh "
y = " e o dia futuro eh "

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh ivalida")
-- OUTPUT:
A entrada 9 eh ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:23:52) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

x = "Hoje eh "
y = " e o dia futuro eh "

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh ivalida")
-- OUTPUT:
A entrada 9 eh ivalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:34:53) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a >= 0) and (a <=0):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"	
	if (b > 0):
		if(c == 0):
			y = "domingo"
		elif(c == 1):
			y = "segunda"
		elif(c == 2):
			y = "terca"
		elif(c == 3):
			y = "quarta"
		elif(c == 4):
			y = "quinta"
		elif(c == 5):
			y = "sexta"
		else:
			(c = 6)
			y = "sabado"
			
print("Hoje eh", x, "e o dia futuro eh", y)			
-- ERROR:
File "XXXX", line 35
    (c = 6)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:05) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a >= 0) and (a <=0):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"	
	if (b > 0):
		if(c == 0):
			y = "domingo"
		elif(c == 1):
			y = "segunda"
		elif(c == 2):
			y = "terca"
		elif(c == 3):
			y = "quarta"
		elif(c == 4):
			y = "quinta"
		elif(c == 5):
			y = "sexta"
		else:
			(c == 6)
			y = "sabado"
			
print("Hoje eh", x, "e o dia futuro eh", y)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)			
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:22) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a >= 0) and (a <=0):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"	
	if (b > 0):
		if(c == 0):
			y = "domingo"
		elif(c == 1):
			y = "segunda"
		elif(c == 2):
			y = "terca"
		elif(c == 3):
			y = "quarta"
		elif(c == 4):
			y = "quinta"
		elif(c == 5):
			y = "sexta"
		else:
			(c == 6)
			y = "sabado"
			
print("Hoje eh", x, "e o dia futuro eh", y)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)			
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:36:33) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a >= 0) and (a <=0):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"	
	if (b > 0):
		if(c == 0):
			y = "domingo"
		elif(c == 1):
			y = "segunda"
		elif(c == 2):
			y = "terca"
		elif(c == 3):
			y = "quarta"
		elif(c == 4):
			y = "quinta"
		elif(c == 5):
			y = "sexta"
		else:
			(c == 6)
			y = "sabado"
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)			
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:37:40) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a >= 0) and (a <=0):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"	
	if (b > 0):
		if(c == 0):
			y = "domingo"
		elif(c == 1):
			y = "segunda"
		elif(c == 2):
			y = "terca"
		elif(c == 3):
			y = "quarta"
		elif(c == 4):
			y = "quinta"
		elif(c == 5):
			y = "sexta"
		else:
			(c == 6)
			y = "sabado"
			

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)			
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:37:53) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a >= 0) and (a <=0):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"	
	if (b > 0):
		if(c == 0):
			y = "domingo"
		elif(c == 1):
			y = "segunda"
		elif(c == 2):
			y = "terca"
		elif(c == 3):
			y = "quarta"
		elif(c == 4):
			y = "quinta"
		elif(c == 5):
			y = "sexta"
		else:
			(c == 6)
			y = "sabado"
			
print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:48) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if()
-- ERROR:
File "XXXX", line 7
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:53) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if()
-- ERROR:
File "XXXX", line 7
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:55) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):

-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:56) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):

-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:39:58) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):

-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:22) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"

-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:28) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:40:34) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:43:22) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"
	else:
		print("A entrada", a, "eh inavalida")

print(x)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:43:31) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"
	else:
		print("A entrada", a, "eh inavalida")

print(x)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:44:10) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"
	else:
		print("A entrada", a, "eh inavalida")

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:03) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"
	else:
		print("A entrada", a, "eh inavalida")

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:18) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"
	else:
		print(print("A entrada", a, "eh inavalida"))

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:22) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (0 <= a <= 6):
	if (a == 0):
		x = "domingo"
	elif (a == 1):
		x = "segunda"
	elif (a == 2):
		x = "terca"
	elif (a == 3):
		x = "quarta"
	elif (a == 4):
		x = "quinta"
	elif (a == 5):
		x = "sexta"
	elif (a == 6):
		x = "sabado"
	else:
		print(print("A entrada", a, "eh inavalida"))

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:47:04) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
		

		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:47:35) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
		

		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:53:03) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		

print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 24, in <module>
    print(x)		
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:54:56) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"

print(x1, x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print(x1, x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:03:47) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"
	
y1 = "e o dia futuro eh"

print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:04:47) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"
	
y1 = "e o dia futuro eh"

print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:06:23) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:06:34) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- EXECUTION TIME:
0.12591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:06:49) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:06:58) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:07:21) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- EXECUTION TIME:
0.144306
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:08:07) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:08:14) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:08:15) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- EXECUTION TIME:
0.173455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:12:37) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:13:21) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:13:45) 
-- CODE:
a = int(input("Dia de hoje: "))
b = int(input("Numero de dias apos hoje: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
else:
	x = "sabado"
		
x1 = "Hoje eh"
y1 = "e o dia futuro eh"

if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 44, in <module>
    print(x1, x, y1, y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 14:21:04) 
-- CODE:
 "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
elif (c == 6):
	y = "sabado"


print(x1, x, y1, y)
 
-- EXECUTION TIME:
0.171431
-- ERROR:
  File "/home/codebench/codes/1674/1107/main.py", line 1
    "quarta"
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:48:31) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

x1 = "Hoje eh"
y1 = "e o dia futuro eh"
c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
	
print(x1, x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 25, in <module>
    print(x1, x)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:52:31) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh" x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh" x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh" x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh" x
elif (a == 4):
	x = "quinta"
	x1 = "Hoje eh" x
elif (a == 5):
	x = "sexta"
	x1 = "Hoje eh" x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh" x
	
	
-- ERROR:
File "XXXX", line 10
    x1 = "Hoje eh" x
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:53:24) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh", x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh", x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh", x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh", x
elif (a == 4):
	x = "quinta"
	x1 = "Hoje eh", x
elif (a == 5):
	x = "sexta"
	x1 = "Hoje eh", x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh", x
	
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:53:55) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh", x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh", x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh", x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh", x
elif (a == 4):
	x = "quinta"
	x1 = "Hoje eh", x
elif (a == 5):
	x = "sexta"
	x1 = "Hoje eh", x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh", x

print(x1)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:54:05) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh", x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh", x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh", x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh", x
elif (a == 4):
	x = "quinta"
	x1 = "Hoje eh", x
elif (a == 5):
	x = "sexta"
	x1 = "Hoje eh", x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh", x

print(x1)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 14:55:11) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh" + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh" + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh" + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh" + x
elif (a == 4):
	x = "quinta"
	x1 = "Hoje eh" + x
elif (a == 5):
	x = "sexta"
	x1 = "Hoje eh" + x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh" + x

print(x1)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:02:07) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh " + x
elif (b == 0):
	c = x
	y1 = "e o dia futuro eh " + c
	
print(x1, y1)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 33, in <module>
    print(x1, y1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:06:11) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
elif (a == 6):
	x = "sabado"
	x1 = "Hoje eh " + x
elif (b == 0):
	c = x
	y1 = "e o dia futuro eh " + c
	
print(x1, y1)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 33, in <module>
    print(x1, y1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:07:14) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
else:
	x = "sabado"
	x1 = "Hoje eh " + x
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:10:10) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
else:
	x = "sabado"
	x1 = "Hoje eh " + x

print(x1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:10:10) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
else:
	x = "sabado"
	x1 = "Hoje eh " + x

print(x1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:10:19) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
else:
	x = "sabado"
	x1 = "Hoje eh " + x

print(x1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 30, in <module>
    print(x1)	
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:10:43) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a < 0) or (a > 6):
	print("A entrada", a, "eh invalida")
elif (a == 0):
	x = "domingo"
	x1 = "Hoje eh " + x
elif (a == 1):
	x = "segunda"
	x1 = "Hoje eh " + x
elif (a == 2):
	x = "terca"
	x1 = "Hoje eh " + x
elif (a == 3):
	x = "quarta"
	x1 = "Hoje eh " + x
elif (a == 4):
	x = "quinta "
	x1 = "Hoje eh " + x
elif (a == 5):
	x = "sexta "
	x1 = "Hoje eh " + x
else:
	x = "sabado"
	x1 = "Hoje eh " + x

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:26:43) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:26:53) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:28:39) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	c = x
	
print(c)	
	
-- OUTPUT:
A entrada 9 eh invalida
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:29:41) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	y = x

	
print(y)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 29, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:29:51) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	y = x

	
print(y)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 29, in <module>
    print(y)	
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:33:08) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
else:
	(c == 6)
	y = "sabado"
	
print("Hoje eh", x, "e o dia futuro eh", y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:33:20) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
else:
	(c == 6)
	y = "sabado"
	
print("Hoje eh", x, "e o dia futuro eh", y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:33:30) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
else:
	(c == 6)
	y = "sabado"
	
print("Hoje eh", x, "e o dia futuro eh", y)	
-- EXECUTION TIME:
0.155439
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1107/main.py", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:33:49) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"
else:
	print("A entrada", a, "eh invalida")

#Dia Futuro
if (b == 0):
	y = x
elif (c == 0):
	y = "domingo"
elif (c == 1):
	y = "segunda"
elif (c == 2):
	y = "terca"
elif (c == 3):
	y = "quarta"
elif (c == 4):
	y = "quinta"
elif (c == 5):
	y = "sexta"
else:
	(c == 6)
	y = "sabado"
	
print("Hoje eh", x, "e o dia futuro eh", y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:37:07) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:37:09) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 15:37:09) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

#Dia de hoje
if (a == 0):
	x = "domingo"
elif (a == 1):
	x = "segunda"
elif (a == 2):
	x = "terca"
elif (a == 3):
	x = "quarta"
elif (a == 4):
	x = "quinta"
elif (a == 5):
	x = "sexta"
elif (a == 6):
	x = "sabado"

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 43, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:02:58) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a >= 0) and (a <= 6):
	if (b > 0):
		if (a == 0):
			x = "domingo"
		elif (a == 1):
			x = "segunda"
		elif (a == 2):
			x = "terca"
		elif (a == 3):
			x = "quarta"
		elif (a == 4):
			x = "quinta"
		elif (a == 5):
			x = "sexta"
		elif (a == 6):
			x = "sabado"
		if (c == 0):
			y = "domingo"
		elif (c == 1):
			y = "segunda"
		elif (c == 2):
			y = "terca"
		elif (c == 3):
			y = "quarta"
		elif (c == 4):
			y = "quinta"
		elif (c == 5):
			y = "sexta"
		elif (c == 6):
			y = "sabado"
else:
	print("A entrada", a, "eh invalida")
	
print("Hoje eh", x, "e o dia futuro eh", y)	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 39, in <module>
    print("Hoje eh", x, "e o dia futuro eh", y)	
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:03:28) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a >= 0) and (a <= 6):
	if (b > 0):
		if (a == 0):
			x = "domingo"
		elif (a == 1):
			x = "segunda"
		elif (a == 2):
			x = "terca"
		elif (a == 3):
			x = "quarta"
		elif (a == 4):
			x = "quinta"
		elif (a == 5):
			x = "sexta"
		elif (a == 6):
			x = "sabado"
		if (c == 0):
			y = "domingo"
		elif (c == 1):
			y = "segunda"
		elif (c == 2):
			y = "terca"
		elif (c == 3):
			y = "quarta"
		elif (c == 4):
			y = "quinta"
		elif (c == 5):
			y = "sexta"
		elif (c == 6):
			y = "sabado"
else:
	print("A entrada", a, "eh invalida")
	
			
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:09:49) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a >= 0) and (a <= 6):
	if (b > 0):
		if (a == 0):
			x = "domingo"
		elif (a == 1):
			x = "segunda"
		elif (a == 2):
			x = "terca"
		elif (a == 3):
			x = "quarta"
		elif (a == 4):
			x = "quinta"
		elif (a == 5):
			x = "sexta"
		elif (a == 6):
			x = "sabado"
		if (c == 0):
			y = "domingo"
		elif (c == 1):
			y = "segunda"
		elif (c == 2):
			y = "terca"
		elif (c == 3):
			y = "quarta"
		elif (c == 4):
			y = "quinta"
		elif (c == 5):
			y = "sexta"
		elif (c == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", b, "eh invalida")
else:
	print("A entrada", a, "eh invalida")
	
			
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:10:10) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a >= 0) and (a <= 6):
	if (b > 0):
		if (a == 0):
			x = "domingo"
		elif (a == 1):
			x = "segunda"
		elif (a == 2):
			x = "terca"
		elif (a == 3):
			x = "quarta"
		elif (a == 4):
			x = "quinta"
		elif (a == 5):
			x = "sexta"
		elif (a == 6):
			x = "sabado"
		if (c == 0):
			y = "domingo"
		elif (c == 1):
			y = "segunda"
		elif (c == 2):
			y = "terca"
		elif (c == 3):
			y = "quarta"
		elif (c == 4):
			y = "quinta"
		elif (c == 5):
			y = "sexta"
		elif (c == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", b, "eh invalida")
else:
	print("A entrada", a, "eh invalida")
	
			
-- EXECUTION TIME:
0.131914
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:10:48) 
-- CODE:
a = int(input("Dia: "))
b = int(input("Futuro: "))

c = (a + b)%7

if (a >= 0) and (a <= 6):
	if (b > 0):
		if (a == 0):
			x = "domingo"
		elif (a == 1):
			x = "segunda"
		elif (a == 2):
			x = "terca"
		elif (a == 3):
			x = "quarta"
		elif (a == 4):
			x = "quinta"
		elif (a == 5):
			x = "sexta"
		elif (a == 6):
			x = "sabado"
		if (c == 0):
			y = "domingo"
		elif (c == 1):
			y = "segunda"
		elif (c == 2):
			y = "terca"
		elif (c == 3):
			y = "quarta"
		elif (c == 4):
			y = "quinta"
		elif (c == 5):
			y = "sexta"
		elif (c == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", b, "eh invalida")
else:
	print("A entrada", a, "eh invalida")
	
			
-- EXECUTION TIME:
0.138632
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
